[gd_scene load_steps=25 format=3 uid="uid://bux6lba35alf"]

[ext_resource type="Script" uid="uid://dh0s3okpdabeh" path="res://Enemies/Ankang/mimic_enemy.gd" id="1_kkmlh"]
[ext_resource type="PackedScene" uid="uid://b31jl28hxh0xn" path="res://GeneralNodes/HitBox/hit_box.tscn" id="2_30tw3"]
[ext_resource type="Texture2D" uid="uid://c1qurx28bxtmc" path="res://Props/Sprites/props and items x1.png" id="2_44uuf"]
[ext_resource type="Texture2D" uid="uid://c7c6pycgnvpjs" path="res://Resource/Shadow.png" id="3_h6t7c"]
[ext_resource type="PackedScene" uid="uid://gopcfynjy3tl" path="res://GeneralNodes/HurtBox/hurt_box.tscn" id="3_j3etr"]
[ext_resource type="Texture2D" uid="uid://bm5cved0c0ql8" path="res://Resource/Untitled (1).png" id="3_p0guv"]
[ext_resource type="Texture2D" uid="uid://3cvlb5t14y8a" path="res://Items/sprites/items.png" id="4_wh5dd"]
[ext_resource type="AudioStream" uid="uid://bohxw81fob20f" path="res://Enemies/Slime/hit_01.wav" id="7_44uuf"]
[ext_resource type="AudioStream" uid="uid://byekm3ekuuk3f" path="res://Enemies/Slime/hit_00.wav" id="8_gpas6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gpas6"]
atlas = ExtResource("2_44uuf")
region = Rect2(2.5566788, 1.7998724, 27.29068, 28.008862)
margin = Rect2(15, 15, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cmsa"]
atlas = ExtResource("2_44uuf")
region = Rect2(448.61856, 230.25, 31.302643, 31.815796)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsedr"]
atlas = ExtResource("2_44uuf")
region = Rect2(2.000122, 63.92717, 29.00003, 32.078537)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayh5q"]
atlas = ExtResource("2_44uuf")
region = Rect2(0.58374786, 329.00006, 32.65551, 47.58374)

[sub_resource type="AtlasTexture" id="AtlasTexture_lte1b"]
atlas = ExtResource("2_44uuf")
region = Rect2(317.5998, 69.01055, 36.96115, 28.358139)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh5dd"]
atlas = ExtResource("4_wh5dd")
region = Rect2(224.38669, 0, 31.613312, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuqps"]
atlas = ExtResource("4_wh5dd")
region = Rect2(33.366047, 0, 28.740501, 32)

[sub_resource type="Animation" id="Animation_y831t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("chomp_sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("chomp_sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cuqps"]
resource_name = "chomp_down"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.39896184, 0.5, 0.6, 0.7, 0.8, 0.90000004, 0.9696741),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4, 7, 9, 10, 11, 12, 1, 20]
}

[sub_resource type="Animation" id="Animation_44uuf"]
resource_name = "test"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("chomp_sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 7, 8, 9, 10, 11, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("chomp_sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.49668744),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vn4as"]
_data = {
&"RESET": SubResource("Animation_y831t"),
&"chomp_down": SubResource("Animation_cuqps"),
&"test": SubResource("Animation_44uuf")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5a21k"]
radius = 13.038404

[sub_resource type="CircleShape2D" id="CircleShape2D_okvgr"]
radius = 25.019993

[sub_resource type="CircleShape2D" id="CircleShape2D_e33gi"]
radius = 11.045361

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44uuf"]

[node name="MimicEnemy" type="CharacterBody2D"]
z_index = 1
position = Vector2(0, -1)
collision_layer = 256
collision_mask = 16
script = ExtResource("1_kkmlh")
disguise_sprites = Array[Texture2D]([SubResource("AtlasTexture_gpas6"), SubResource("AtlasTexture_8cmsa"), SubResource("AtlasTexture_dsedr"), SubResource("AtlasTexture_ayh5q"), SubResource("AtlasTexture_lte1b"), SubResource("AtlasTexture_wh5dd"), SubResource("AtlasTexture_cuqps")])
glow_color = Color(1, 1, 1, 1)
chomp_damage = 20
hp = 10

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1, 0.98)

[node name="chomp_sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-12, -10)
texture = ExtResource("3_p0guv")
hframes = 6
vframes = 4

[node name="GlowSprite" type="Sprite2D" parent="."]
modulate = Color(0.22049993, 0.63, 0, 0.49019608)
self_modulate = Color(0.45000005, 1, 0, 0.5294118)
scale = Vector2(0.9375, 1)
texture = ExtResource("3_h6t7c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vn4as")
}

[node name="HitBox" parent="." instance=ExtResource("2_30tw3")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_5a21k")

[node name="ChompHurtBox" parent="." instance=ExtResource("3_j3etr")]
collision_mask = 258

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChompHurtBox"]
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_okvgr")
debug_color = Color(0.99, 0.08249998, 0, 0.2784314)

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 257

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_e33gi")
debug_color = Color(0.533482, 0.5702658, 0, 0.41960785)

[node name="WarningAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_44uuf")
max_polyphony = 4

[node name="ChompAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_gpas6")
max_polyphony = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_44uuf")
disabled = true
